# em

./: .gitignore  Makefile  README.org  em  em.conf  pyproject.toml
em/: config.py  console.py  emacs.py  gif.py  image.py  window.py
